# aws-ip-ranges

./: Makefile  README.md  pyproject.toml  requirements.txt
aws_ip_ranges/: app.py  mod1.py
src/aws_ip_ranges/: aws_ip_ranges.py
