[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws_ip_ranges"
description = "Tool to easily get the IP ranges of AWS services."
classifiers = ["Private :: Do Not Upload"]
version = "0.0.1"
dependencies = [
    "requests==2.28.1"
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.distutils.bdist_wheel]
universal = true
