[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws_ip_ranges"
description = "Tool to easily get the IP ranges of AWS services."
classifiers = []
version = "0.0.1"
dependencies = [
    "requests>=2.28.1",
    "click>=8.0.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools.packages.find]
where = ["src"]
